[tool.poetry]
name = "triton-performance"
version = "0.1.0"
description = "This program is used to test the performance of the Triton Server"
authors = ["PabloLorenzoFdz <pablo.lorenzo@arcelormittal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
tritonclient = {extras=["all"], version="^2.47.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
performance = "triton_performance.cli:main"
sharedmemory = "triton_performance.shm_inference:main"
monitor = "triton_performance.monitor:monitor_inferences"
